libview: Added 'cursor-moved' signal to notify when the caret cursor has been moved.

https://bugzilla.gnome.org/show_bug.cgi?id=702078